Fix little gap in hover

--- a/scss/pages/_toc.scss
+++ b/scss/pages/_toc.scss
@@ -13,6 +13,7 @@
           .title {
             @include text-ui-small();
             color: $color_1;
+            line-height: 16px;
           }
           &:not(.delete) {
             padding: 8px 10px 4px 30px;
